# packages

forthebirds/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
forthebirds/docs/: Makefile  conf.py  example.ipynb  make.bat
forthebirds/docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
forthebirds/docs/_build/html/_modules/: index.html
forthebirds/docs/_build/html/_modules/forthebirds/: forthebirds.html
forthebirds/docs/_build/html/_sources/autoapi/: index.rst.txt
forthebirds/docs/_build/html/_sources/autoapi/forthebirds/: index.rst.txt
forthebirds/docs/_build/html/_sources/autoapi/forthebirds/forthebirds/: index.rst.txt
forthebirds/docs/_build/html/autoapi/: index.html
forthebirds/docs/_build/html/autoapi/forthebirds/: index.html
forthebirds/docs/_build/html/autoapi/forthebirds/forthebirds/: index.html
forthebirds/htmlcov/: .gitignore  index.html
forthebirds/src/forthebirds/: __init__.py  forthebirds.py
forthebirds/tests/: test_forthebirds.py
